<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personalizada"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/purple_500"
        app:titleTextColor="@color/white"
        android:elevation="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_Poke_00"
            android:layout_width="191dp"
            android:layout_height="195dp"
            android:contentDescription="@string/imagenes"
            app:srcCompat="@drawable/bulbasaur01" />

        <TextView
            android:id="@+id/tv_Id_Pokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_Nombre_Pokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_Tipo_Pokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/imagenes" />

        <LinearLayout
            android:layout_width="389dp"
            android:layout_height="117dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_Poke_01"
                android:layout_width="0dp"
                android:layout_height="117dp"
                android:layout_weight="1"
                android:contentDescription="@string/imagenes"
                app:srcCompat="@drawable/bulbasaur02" />

            <ImageView
                android:id="@+id/iv_Poke_02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagenes"
                app:srcCompat="@drawable/bulbasaur03" />

            <ImageView
                android:id="@+id/iv_Poke_03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagenes"
                app:srcCompat="@drawable/bulbasaur01" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/anterior" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_Siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/siguiente" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>